force-app/main/default/objects/kwebsitepage_track__c/kwebsitepage_track__c.object-meta.xml
<CustomObject>
    <label>kwebsitepage_track</label>
    <nameField>
        <displayFormat>track-{0000}</displayFormat>
        <label>kwebsitepage_track Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>kwebsitepage_tracks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>