force-app/main/default/objects/kwebsitepage_track__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>kwebsitepage_tracks</relationshipLabel>
    <relationshipName>kwebsitepage_tracks</relationshipName>
    <type>Lookup</type>
</CustomField>