force-app/main/default/objects/kwebsitepage_track__c/fields/Knowledge_Version__c.field-meta.xml
<CustomField>
    <fullName>Knowledge_Version__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Knowledge Version</label>
    <referenceTo>Knowledge_Version__c</referenceTo>
    <relationshipLabel>kwebsitepage_tracks</relationshipLabel>
    <relationshipName>kwebsitepage_tracks</relationshipName>
    <type>Lookup</type>
</CustomField>