force-app/main/default/objects/kwebsitepage_track__c/fields/kwebsitepage__c.field-meta.xml
<CustomField>
    <fullName>kwebsitepage__c</fullName>
    <label>kwebsitepage</label>
    <referenceTo>kwebsitepage__c</referenceTo>
    <relationshipLabel>kwebsitepage_tracks</relationshipLabel>
    <relationshipName>kwebsitepage_tracks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>