force-app/main/default/objects/kwebsitepage_track__c/fields/PageView__c.field-meta.xml
<CustomField>
    <fullName>PageView__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PageView</label>
    <referenceTo>kwebsitepage_track__c</referenceTo>
    <relationshipLabel>kwebsitepage_tracks</relationshipLabel>
    <relationshipName>kwebsitepage_tracks</relationshipName>
    <type>Lookup</type>
</CustomField>