force-app/main/default/objects/kwebsitepage_track__c/fields/rating__c.field-meta.xml
<CustomField>
    <fullName>rating__c</fullName>
    <label>rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>like</fullName>
                <color>#33CC00</color>
                <label>like</label>
            </value>
            <value>
                <fullName>dislike</fullName>
                <color>#CC0000</color>
                <label>dislike</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>