force-app/main/default/objects/kwebsitepage_track__c/fields/Search_Result__c.field-meta.xml
<CustomField>
    <fullName>Search_Result__c</fullName>
    <label>Search Result</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>