force-app/main/default/objects/kwebsitepage_track__c/fields/Search_Term__c.field-meta.xml
<CustomField>
    <fullName>Search_Term__c</fullName>
    <label>Search Term</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>