force-app/main/default/objects/kwebsitepage_track__c/fields/SessionId__c.field-meta.xml
<CustomField>
    <fullName>SessionId__c</fullName>
    <label>SessionId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>