force-app/main/default/objects/kwebsitepage_track__c/fields/snapinopened__c.field-meta.xml
<CustomField>
    <fullName>snapinopened__c</fullName>
    <defaultValue>false</defaultValue>
    <label>snapinopened</label>
    <type>Checkbox</type>
</CustomField>