force-app/main/default/objects/kwebsitepage_track__c/fields/UseType__c.field-meta.xml
<CustomField>
    <fullName>UseType__c</fullName>
    <label>UseType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>KBUseType</valueSetName>
    </valueSet>
</CustomField>