force-app/main/default/objects/kwebsitepage_track__c/fields/Viewedfrom__c.field-meta.xml
<CustomField>
    <fullName>Viewedfrom__c</fullName>
    <label>Viewed From</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>search</fullName>
            </value>
            <value>
                <fullName>featured</fullName>
            </value>
            <value>
                <fullName>mostviewed</fullName>
            </value>
            <value>
                <fullName>livechatagent</fullName>
            </value>
            <value>
                <fullName>relevant</fullName>
            </value>
            <value>
                <fullName>recommended</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>