force-app/main/default/objects/kwebsitepage_track__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SessionId__c</columns>
    <columns>UseType__c</columns>
    <columns>kwebsitepage__c</columns>
    <columns>Knowledge_Version__c</columns>
    <columns>Viewedfrom__c</columns>
    <columns>Contact__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>